tests/urmoac/input/wkt/errors/polygons_broken_geometry/errors.urmoac
Broken geometry in object '1000'.
Objects could not be loaded.
Quitting on error...
